finish the lab Features

--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
       <option value="default">Filter by Keyword</option>
     </select>
     
+    <div id="div-buttons">
     <div id="sortButtons">
-      <button id="sortByTitle">Sort By Title </button>
-      <button id="sortByHorns"> Sort By Horns </button>
+
+      <button class="btn-1 icon-forward" id="sortByTitle"><span>Sort By Title </span></button>
+      <button class="btn-1 icon-forward" id="sortByHorns"><span>Sort By Horns</span></button>
     </div>
 
 <br><br><br>
 
 
-
     <div id="buttons">
-      <button id="Firstpage">First page </button>
-      <button id="SecondPage"> Second Page </button>
+      <button class="btn-1 icon-forward" id="Firstpage"><span>First page</span></button>
+      <button class="btn-1 icon-forward" id="SecondPage"><span>Second page</span></button>
+   
     </div>
+ 
+  </div>
 
   </header>
 
